2008-01-10  Wade Berrier  <wberrier@novell.com>

	* Makefile.am: include *.manifest in EXTRA_DIST

2008-01-10  Andreia Gaita <avidigal@novell.com>

	* gluezilla.dll.nonsp1.manifest, gluezilla.dll.nonsp1.debug.manifest:
	custom manifests that reference the original (non sp1) crt so that
	gluezilla can run on un-updated XPs even if compiled with an SP1
	platform SDK.
	
	* windows.mak: Ignore the generated manifest file, and use our own
	manifest files instead.
	
2008-01-06  Andreia Gaita <avidigal@novell.com>

	* Widget.h, Widget.cpp, gluezilla.h, gluezilla.cpp: Add method to get
	proxies for any object. It's not enough to use proxies for the top
	document object, as any other object retrieved through it with xpcom
	will not come proxied.

	Note: interface marshalling will addref objects asap, which happens 
	before we can proxy them properly, so the addrefs and releases will
	happen on the wrong thread. Things only go wrong if the object is
	manipulated on the wrong thread and if that forces a gui update, 
	though, so it's not (too) bad.

2008-01-04  Andreia Gaita <avidigal@novell.com>

	* Widget.cpp: fix calls between threads, now that we can actually
	go through this from different places.

2007-12-25  Andreia Gaita <avidigal@novell.com>
	
	* Wrap mozilla dom objects around proxies to allow winforms to call 
	methods	accross threads (from the winforms ui thread to the main 
	mozilla ui thread).

2007-11-19  Wade Berrier  <wberrier@novell.com>

	* Makefile.am: include windows.mak in EXTRA_DIST

2007-11-18  Andreia Gaita <avidigal@novell.com>

	* windows.mak: embed manifest file in a release build so windows 
	actually loads dependencies correctly

2007-11-09  Andreia Gaita <avidigal@novell.com>

	* BrowserWindow.cpp: Disable event calls on OnStateChange, it's unstable

2007-11-08  Andreia Gaita <avidigal@novell.com>

	* BrowserWindow.cpp: When loading, invoke events on the managed side
	so it can track progress and url changes.