@@ -1,3 +1,9 @@
+2008-01-18  Andreia Gaita <avidigal@novell.com>
+
+	* gluezilla.cpp, gluezilla.h, Widget.h: add platform support
+	* BrowserWindow.cpp, interfaces.h: Use specific widget define instead
+	of generic os define to detect gtk
+
 2008-01-10  Wade Berrier  <wberrier@novell.com>
 
 	* Makefile.am: include *.manifest in EXTRA_DIST
